tests/loops/valid/for_nested_scope.su
s32 main() {
    s32 i = 0;
    s32 j = 0;

    for (s32 i = 100; i > 0; i = i - 1) {
        s32 i = 0;
        s32 j = j * 2 + i;
    }

    s32 k = 3;

    return j + k;
}