tests/loops/invalid/syntax_err_do_no_semicolon.su
s32 main() {
    do
        3;
    while (4)
}